--- a/client/search.jade
+++ b/client/search.jade
@@ -100,7 +100,7 @@ template(name='home')
                         +tag_picker
                         // .ui.label(title=count) #{name}
         .row
-            .sixteen
+            .sixteen.wide.column
                 // .ui.four.wide.column
                 //     each wikis
                 //         .ui.card
@@ -128,12 +128,11 @@ template(name='home')
                 //         // else
                 +alpha
                 if picked_tags
-                    .ui.sixteen.wide.column
-                        .ui.stackable.three.column.padded.grid.scrolling
-                            each rposts
-                                +rcard
-                        //     .ui.basic.center.aligned.segment
-                        //         i.big.loading.yin.yang.icon
+                    .ui.stackable.three.column.padded.grid.scrolling
+                        each rposts
+                            +rcard
+                    //     .ui.basic.center.aligned.segment
+                    //         i.big.loading.yin.yang.icon
 template(name='search_shortcut')
     i.big.grey.link.icon.click_shortcut.zoomer(class=icon title=tag)
 
