--- a/client/style.css
+++ b/client/style.css
@@ -112,10 +112,10 @@
 /*  max-width: inherit !important;*/
 /*  width: inherit !important;*/
 /*}*/
-/*.full {*/
-/*  max-width: 100% !important;*/
-/*  width: 100% !important;*/
-/*}*/
+.full {
+  max-width: 100% !important;
+  width: 100% !important;
+}
 
 /*.unread {*/
 /*  filter: drop-shadow(0px 0px 1px black);    */
@@ -294,19 +294,19 @@
   /*padding: .2em; */
   /*margin-bottom: 4em; */
 /*}*/
-/*.hscroll {*/
-    /*border-radius: 0 0 7px 7px !important; */
-    /*transition: background-color 1s ease !important;*/
-    /* background-color: rgba(250,250,250,.6) !important; */
-    /*background-color: rgba(50,110,100,1) !important; */
-
-    /* opacity: .7 !important; */
-/*    overflow-y:hidden;*/
-/*    overflow-x:scroll;*/
-    /* padding-top: .2em; */
-    /* padding: .2em; */
-    /*margin-bottom: 4em; */
-/*}*/
+.hscroll {
+  /*border-radius: 0 0 7px 7px !important; */
+  transition: background-color 1s ease !important;
+  /*background-color: rgba(250,250,250,.6) !important; */
+  /*background-color: rgba(50,110,100,1) !important; */
+  
+  /*opacity: .7 !important; */
+  overflow-y:hidden;
+  overflow-x:scroll;
+  /*padding-top: .2em; */
+  /*padding: .2em; */
+  /*margin-bottom: 4em; */
+}
 
 /*.hidden {*/
 /*  display:hidden !important;*/
@@ -324,10 +324,10 @@
 	/*padding-left: 1em;*/
 /*}*/
 
-/*.hscroll::-webkit-scrollbar {*/
-/*    height: 1px !important;*/
-   /*border-radius: 7px !important; */
-/*}*/
+.hscroll::-webkit-scrollbar {
+    height: 1px !important;
+   border-radius: 7px !important; 
+}
 /*.secnav::-webkit-scrollbar {*/
 /*    height: 1px !important;*/
    /*border-radius: 7px !important; */
@@ -686,6 +686,15 @@
     /*margin: 7px !important;*/
 /*    border-radius: 7px !important; */
 /*}*/
+@media only screen and (max-width: 765px) {
+  .mobile,
+  .tablet.only,
+  .computer.only,
+  .large.monitor.only,
+  .widescreen.monitor.only {
+    display: none !important;
+  }
+}
 
 ::-webkit-scrollbar {
   width: 1px !important;
@@ -819,10 +828,10 @@
 /*  font-family: 'Ubuntu', sans-serif !important;*/
 /*}*/
 
-/*@keyframes fadein {*/
-/*  from { opacity: 0}*/
-/*  to   { opacity: 1}*/
-/*}*/
+@keyframes fadein {
+  from { opacity: 0}
+  to   { opacity: 1}
+}
 
 /*.result_column {*/
   /* animation: fadein 1s; */
@@ -839,7 +848,7 @@
 
 
 
- Mobile 
+ /*Mobile */
 @media only screen and (max-width: 765px) {
   .mobile.hidden,
   .tablet.only,
@@ -849,7 +858,7 @@
     display: none !important;
   }
 }
- Tablet / iPad Portrait 
+ /*Tablet / iPad Portrait */
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .mobile.only,
   .tablet.hidden,
@@ -859,7 +868,7 @@
     display: none !important;
   }
 }
- Computer / Desktop / iPad Landscape 
+ /*Computer / Desktop / iPad Landscape */
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   .mobile.only,
   .tablet.only,
@@ -869,7 +878,7 @@
     display: none !important;
   }
 }
- Large Monitor 
+ /*Large Monitor */
 @media only screen and (min-width: 1200px) and (max-width: 1919px) {
   .mobile.only,
   .tablet.only,
@@ -879,7 +888,7 @@
     display: none !important;
   }
 }
- Widescreen Monitor 
+ /*Widescreen Monitor */
 @media only screen and (min-width: 1920px) {
   .mobile.only,
   .tablet.only,
